testdata/baselines/reference/submodule/conformance/ambientDeclarationsPatterns_merging1.errors.txt
testA.ts(1,37): error TS2307: Cannot find module 'a.foo' or its corresponding type declarations.
testA.ts(2,16): error TS2664: Invalid module name in augmentation, module 'a.foo' cannot be found.
testB.ts(1,37): error TS2307: Cannot find module 'b.foo' or its corresponding type declarations.


==== types.ts (0 errors) ====
    declare module "*.foo" {
      let everywhere: string;
    }
    
    
==== testA.ts (2 errors) ====
    import { everywhere, onlyInA } from "a.foo";
                                        ~~~~~~~
!!! error TS2307: Cannot find module 'a.foo' or its corresponding type declarations.
    declare module "a.foo" {
                   ~~~~~~~
!!! error TS2664: Invalid module name in augmentation, module 'a.foo' cannot be found.
      let onlyInA: number;
    }
    
==== testB.ts (1 errors) ====
    import { everywhere, onlyInA } from "b.foo"; // Error
                                        ~~~~~~~
!!! error TS2307: Cannot find module 'b.foo' or its corresponding type declarations.
    